--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -533,5 +533,7 @@ models:
 stackbit_banner:
   show_banner: true
   name: Archetype
-  create_url: 'https://app.stackbit.com/wizard?theme=archetype'
+  create_url: 'https://app.stackbit.com/create?theme=archetype'
   github_url: 'https://github.com/stackbithq/stackbit-theme-archetype'
+pagesDir: content
+staticDir: static
